# -pp-labs

lab0/: CMakeLists.txt  README.txt  main.cpp  module1.cpp  module1.h  module2.cpp  module3.cpp
lab1/bigint/: CMakeLists.txt  bigint_vec.cpp  bigint_vec.h
lab2/: CMakeLists.txt  switcher.cpp
lab2/prisoners_dilema/: CMakeLists.txt  main.cpp
lab2/prisoners_dilema/prisoners_habbit/: CMakeLists.txt  common_strategies.cpp  prisoners_habbit.cpp  prisoners_habbit.h
lab2/prisoners_dilema/prisoners_habbit/prisoners_habbit/: prisoners_habbit.cpp
